--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.3",
     "react-truncate": "^2.4.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "standard": "^14.3.3"
   },
   "scripts": {
